[package]
name = "google_auth_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
dotenv = "0.15.0"
# headless_chrome = "1.0.14"
oauth2 = "4.4.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
webbrowser = "1.0"
